# perfetto_hpc

./: CMakeLists.txt
perfetto_hpc/: CMakeLists.txt  hip_api.cxx  perfetto_hpc.cxx  perfetto_hpc_pmpi.h  perfetto_pmpi.tpl.cxx  pmpi.cxx  pmpi_wrap.tpl.cxx  track_event.cxx
perfetto_hpc/include/: perfetto_hpc.h  perfetto_hpc_categories.h  perfetto_hpc_hip_api.h
perfetto_hpc/tests/: CMakeLists.txt  test_hip_api.cxx  test_mpi.cxx  test_mpi_fortran.F90  test_simple.cxx
